# rpi_video

./: .gitignore  .iex.exs  .tool-versions  Cargo.toml  README.md  bors.toml  mix.exs
.github/workflows/: ci.yml
config/: config.exs
lib/: rpi_video.ex
lib/mix/tasks/: compile.cargo.ex
lib/rpi_video/: mock_server.ex  real_server.ex
priv/: real_rpi_video
src/: capture.rs  mock_capture_task.rs  mock_rpi_video.rs  real_capture_task.rs  real_rpi_video.rs
src/capture/: capture_main_loop.rs  capture_main_loop_injector.rs  capture_param.rs  capture_state.rs  capture_task.rs  mock_capture_task.rs  real_capture_task.rs
user-guides/: Presentation-CN.md
user-guides/2019-10-26-cn-presentation/: cn-presentation-raw-text.md  nerves-simple-layout.drawio  rpi-video-layout.drawio
