[package]
name = "rpi_video"
version = "0.0.1"

[[bin]]
name = "mock_rpi_video"
path = "src/mock_rpi_video.rs"

[[bin]]
name = "real_rpi_video"
path = "src/real_rpi_video.rs"

[dependencies]
byteorder = "1"
eetf = "0.4"
libc = "0.2"
nix = "0.15.0"

[target.armv7-unknown-linux-gnueabihf.dependencies]
rpi-video-rs = { path = "../rpi-video-rs" }
