[package]
name = "rpi_video"
version = "0.0.1"
authors = ["Steven Gu <asongala@163.com>"]
license = "MIT"
description = "Elixir version of H264 video record on Raspberry Pi"
homepage = "https://github.com/Pragmatic-Elixir-Meetup/rpi_video"
documentation = "https://github.com/Pragmatic-Elixir-Meetup/rpi_video"
repository = "https://github.com/Pragmatic-Elixir-Meetup/rpi_video"
edition = "2018"

[[bin]]
name = "mock_rpi_video"
path = "src/mock_rpi_video.rs"

[[bin]]
name = "real_rpi_video"
path = "src/real_rpi_video.rs"

[dependencies]
eetf = "0.4"
libc = "0.2"
nix = "0.15.0"

[target.armv7-unknown-linux-gnueabihf.dependencies]
rpi-video-rs = "0.0.2"
